swithc to akka 2.6 and updated to springboot 4.2