@@ -9,7 +9,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.4.RELEASE</version>
+        <version>2.4.2</version>
         <relativePath/>
         <!--  lookup parent from repository  -->
     </parent>
@@ -37,12 +37,13 @@
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
         <junit-version>5.1.0</junit-version>
-        <compiler-plugin-version>3.1</compiler-plugin-version>
-
+        <compiler-plugin-version>3.8.0</compiler-plugin-version>
+        <maven.compiler.release>15</maven.compiler.release>
         <jaxb.version>2.3.0</jaxb.version>
         <jaxws.version>2.3.0</jaxws.version>
+
+        <java.version>15</java.version>
     </properties>
 
     <profiles>
@@ -307,9 +308,10 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${compiler-plugin-version}</version>
                     <configuration>
-                        <source>${java.version}</source>
-                        <target>${java.version}</target>
-                        <encoding>${project.build.sourceEncoding}</encoding>
+                        <release>${java.version}</release>
+<!--                        <compilerArgs>-->
+<!--                            &#45;&#45;enable-preview-->
+<!--                        </compilerArgs>-->
                     </configuration>
                 </plugin>
                 <plugin>
@@ -334,9 +336,11 @@
                             <exclude>**/IT*.java</exclude>
                             <exclude>**/*IT.java</exclude>
                         </excludes>
+                        <forkCount>3</forkCount>
+                        <reuseForks>true</reuseForks>
+                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                     </configuration>
                 </plugin>
-
                 <plugin>
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
@@ -496,6 +500,7 @@
         <module>club-manager-member</module>
         <module>club-manager-eventstore-akka</module>
         <module>club-manager-springboot-app</module>
+<!--        <module>club-manager-vaadin</module>-->
     </modules>
 
 </project>
